# ClearMoney

./: .clinerules  .dockerignore  .env.example  .env.prod.example  .gitignore  .golangci.yml  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Caddyfile  Dockerfile  GEMINI.md  Makefile  README.md  TASKS.md  clearmoney-prd.md  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum  opencode.json  pyproject.toml  skills-lock.json
backend/: .gitignore  Dockerfile  conftest.py  manage.py  pyproject.toml  requirements.txt  vulture_whitelist.py
backend/accounts/: admin.py  apps.py  display.py  institution_data.py  models.py  services.py  types.py  urls.py  views.py
backend/accounts/migrations/: 0001_state_only.py  0002_state_only_account.py  0003_retarget_user_fk.py  0004_state_only_account_snapshot.py  0005_account_last_reconciled_at.py  0006_account_balance_check_fields.py  0007_remove_account_role_tags.py  0008_account_deleted_at.py  0009_account_roundup_increment_and_more.py  0010_systembank.py  0011_seed_egypt_system_banks.py  0012_institution_system_bank.py
backend/accounts/tests/: test_api_views.py  test_delete_confirmation.py  test_display.py  test_institution_data.py  test_institution_system_bank.py  test_reconciliation.py  test_services.py  test_system_bank.py  test_system_bank_seed.py  test_system_bank_views.py  test_views.py
backend/auth_app/: admin.py  apps.py  currency.py  models.py  services.py  urls.py  views.py
backend/auth_app/migrations/: 0001_state_only.py  0002_state_only_user_session_authtoken.py  0003_state_only_daily_snapshot.py  0004_add_user_language.py  0005_alter_user_language.py  0006_remove_userconfig_failed_attempts_and_more.py  0007_currency_registry_and_preferences.py  0008_historicalsnapshot.py  0009_remove_dailysnapshot_daily_snapshots_user_date_unique_and_more.py  0010_currency_name_to_jsonb.py
backend/auth_app/tests/: test_currency.py  test_currency_bilingual.py  test_currency_guardrails.py  test_services.py  test_session_status.py  test_views.py
backend/budgets/: admin.py  apps.py  models.py  services.py  types.py  urls.py  views.py
backend/budgets/migrations/: 0001_state_only.py  0002_retarget_user_fk.py  0003_budget_max_rollover_budget_rollover_enabled.py  0004_alter_budget_currency_alter_totalbudget_currency.py
backend/budgets/tests/: test_multi_currency.py  test_rollover.py  test_services.py  test_views.py
backend/categories/: admin.py  apps.py  models.py  services.py  urls.py  views.py
backend/categories/migrations/: 0001_state_only.py  0002_retarget_user_fk.py  0003_add_name_json.py  0004_name_to_jsonb_data.py  0005_rename_name_json_to_name.py  0006_alter_category_name.py  0007_fix_income_category_types.py  0008_rename_gas_to_fuel.py
backend/categories/tests/: test_bilingual.py  test_services.py  test_views.py
backend/clearmoney/: asgi.py  settings.py  urls.py  wsgi.py
backend/core/: admin.py  apps.py  billing.py  context_processors.py  correlation.py  dates.py  db.py  decorators.py  htmx.py  lsp_client.py  managers.py  middleware.py  models.py  monthly.py  projection.py  ratelimit.py  serializers.py  status.py  tests.py  timing.py  types.py  utils.py  views.py
backend/core/migrations/: 0001_initial.py  0002_alter_dailysnapshot_date_alter_transaction_date.py  0002_drop_enums_convert_to_varchar.py  0003_add_db_defaults_align_columns.py  0003_remove_installmentplan.py  0005_totalbudget.py  (+17 more)
backend/dashboard/: apps.py  services.py  urls.py  views.py
backend/exchange_rates/: admin.py  apps.py  models.py  services.py  urls.py  views.py
backend/fee_presets/: admin.py  apps.py  models.py  services.py  urls.py  views.py
backend/installments/: apps.py  services.py  urls.py  views.py
backend/investments/: admin.py  apps.py  models.py  services.py  urls.py  views.py
backend/jobs/: apps.py  models.py
backend/people/: admin.py  apps.py  models.py  services.py  urls.py  views.py
backend/push/: apps.py  context_processors.py  models.py  services.py  urls.py  views.py
backend/recurring/: admin.py  apps.py  models.py  services.py  types.py  urls.py  views.py
backend/reports/: admin.py  apps.py  models.py  services.py  tests.py  urls.py  views.py
backend/salary/: apps.py  services.py  urls.py  views.py
backend/settings_app/: admin.py  apps.py  models.py  tests.py  urls.py  views.py  views_import.py
backend/templates/: 404.html  429.html  500.html  base.html
backend/tests/: factories.py  test_data_isolation.py  test_lsp_client.py
backend/transactions/: admin.py  apps.py  display.py  models.py  services.py  urls.py  views.py
backend/virtual_accounts/: admin.py  apps.py  models.py  services.py  urls.py  views.py
e2e/: .gitignore  conftest.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml
e2e/tests/: 01-auth.spec.ts  02-accounts.spec.ts  03-transactions.spec.ts  04-dashboard.spec.ts  05-transfers.spec.ts  06-people.spec.ts  07-recurring.spec.ts  08-investments.spec.ts  09-installments.spec.ts  10-reports-settings.spec.ts  11-salary-quickentry.spec.ts  12-dark-mode-pwa.spec.ts  13-login-lockout.spec.ts  14-virtual-accounts.spec.ts  15-budgets.spec.ts  16-more-menu.spec.ts  17-django-migration.spec.ts  18-auth-migration.spec.ts  18-auth.spec.ts  helpers.ts  test_accounts.py  test_alerts.py  test_arabic_smoke.py  test_attachments.py  test_auth.py  test_bottom_sheet_close_button.py  test_budgets.py  test_calendar.py  test_dark_mode_pwa.py  test_dashboard.py  test_dashboard_sparklines.py  test_feature_hints.py  test_fee_analytics.py  test_form_validation.py  test_gestures.py  test_health_warnings.py  test_insights.py  test_installments.py  test_institution_presets.py  test_investments.py  (+17 more)
(+1015 files in other folders)
