[project]
name = "clearmoney-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "Django==6.0.3",
    "psycopg[binary]==3.2.6",
    "gunicorn==23.0.0",
    "django-htmx==1.27.0",
    "dj-database-url==3.1.0",
    "django-ratelimit==4.1.0",  # Rate limiting decorators — like Go's token bucket middleware
    "whitenoise>=6.12.0",
    "python-json-logger>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-django==4.9.0",
    "pytest-mock==3.14.0",
    "pytest-xdist==3.6.1",
    "pytest-cov==6.0.0",
    "factory-boy==3.3.1",
    "ruff",
    "mypy>=1.14",
    "django-stubs[compatible-mypy]>=5.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "clearmoney.settings"
python_files = ["tests.py", "test_*.py", "*_test.py"]
addopts = "--reuse-db -p no:warnings"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["clearmoney", "core", "settings_app", "reports", "dashboard", "accounts"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
# Require annotations on all functions
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
# Packages without stubs (factory-boy, psycopg cursors, etc.)
ignore_missing_imports = true

# Relax rules for test files — pytest fixtures use dynamic types
[[tool.mypy.overrides]]
module = ["conftest", "*.tests", "*.tests.*"]
disallow_untyped_defs = false

[tool.django-stubs]
django_settings_module = "clearmoney.settings"
